# n8n-postgres-integration

./: Dockerfile  README.md  docker-compose.yaml  n8n-workflow.json  pyproject.toml
migrations/: env.py
migrations/versions/: 50202d9c2b6d_create_tables.py
src/: config.py  exceptions.py
src/common/: __init__.py  functions.py  ulid.py
src/data/: clientes.csv  contratos.csv  leituras.csv
src/models/: __init__.py  base.py  clients.py  contracts.py  energy_readings.py  orm.py  src_orm.py
src/seed/: seed_data.py
